improved the JS code

--- a/index.html
+++ b/index.html
@@ -10,11 +10,6 @@
 </head>
 <body>
     <main>
-        <picture>
-            <source srcset="assets/images/background-pattern-desktop.svg" media="(min-width: 768px)">
-            <source srcset="assets/images/background-pattern-mobile.svg" media="(max-width: 767px)">
-            <img src="assets/images/background-pattern-desktop.svg" alt="">
-        </picture>
         <div class="accordion">
             <div class="faq-title">
                 <img src="assets/images/icon-star.svg" alt="icon star">
@@ -25,7 +20,7 @@
                     <p>What is Frontend Mentor, and how will it help me?</p>
                     <img src="assets/images/icon-plus.svg" alt="icon plus">
                 </button>
-                <div class="acc-content" data-acc-hidden="true">
+                <div class="acc-content" aria-hidden="true">
                 <p>
                     Frontend Mentor offers realistic coding challenges to help developers improve their
                     frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for
@@ -38,7 +33,7 @@
                 <p>Is Frontend Mentor free?</p>
                 <img src="assets/images/icon-plus.svg" alt="icon plus">
             </button>
-            <div class="acc-content" data-acc-hidden="true">
+            <div class="acc-content" aria-hidden="true">
             <p>
                 Yes, Frontend Mentor offers both free and premium coding challenges, with the free
                 option providing access to a range of projects suitable for all skill levels.
@@ -50,7 +45,7 @@
                 <p>Can I use Frontend Mentor projects in my portfolio?</p>
                 <img src="assets/images/icon-plus.svg" alt="icon plus">
             </button>
-            <div class="acc-content" data-acc-hidden="true">
+            <div class="acc-content" aria-hidden="true">
                 <p>
                     Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
                     way to showcase your skills to potential employers!
@@ -62,7 +57,7 @@
                 <p>How can I get help if I'm stuck on a Frontend Mentor challenge?</p>
                 <img src="assets/images/icon-plus.svg" alt="icon plus">
             </button>
-            <div class="acc-content" data-acc-hidden="true">
+            <div class="acc-content" aria-hidden="true">
                 <p>
                     The best place to get help is inside Frontend Mentor's Discord community. There's a help
                     channel where you can ask questions and seek support from other community members.                </p>
@@ -70,9 +65,5 @@
         </div>
         </div>
     </main>
-    <!-- <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="https://ahmedemad.dev/">Ahmed Emad</a>.
-    </div> -->
 </body>
 </html>
