--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
         <div class="accordion">
             <div class="faq-title">
-                <img src="assets/images/icon-star.svg" alt="icon star">
+                <img class="star-icon" src="assets/images/icon-star.svg" alt="icon star">
                 <h1>FAQs</h1>
             </div>
             <div class="acc">
@@ -20,7 +20,7 @@
                     <p>What is Frontend Mentor, and how will it help me?</p>
                     <img src="assets/images/icon-plus.svg" alt="icon plus">
                 </button>
-                <div class="acc-content" aria-hidden="true">
+                <div class="acc-content" aria-expanded="false">
                 <p>
                     Frontend Mentor offers realistic coding challenges to help developers improve their
                     frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for
@@ -28,36 +28,39 @@
                 </p>
             </div>
             </div>
+            <hr>
             <div class="acc">
             <button class="acc-btn">
                 <p>Is Frontend Mentor free?</p>
                 <img src="assets/images/icon-plus.svg" alt="icon plus">
             </button>
-            <div class="acc-content" aria-hidden="true">
+            <div class="acc-content" aria-expanded="false">
             <p>
                 Yes, Frontend Mentor offers both free and premium coding challenges, with the free
                 option providing access to a range of projects suitable for all skill levels.
             </p>
             </div>
             </div>
+            <hr>
             <div class="acc">
             <button class="acc-btn">
                 <p>Can I use Frontend Mentor projects in my portfolio?</p>
                 <img src="assets/images/icon-plus.svg" alt="icon plus">
             </button>
-            <div class="acc-content" aria-hidden="true">
+            <div class="acc-content" aria-expanded="false">
                 <p>
                     Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
                     way to showcase your skills to potential employers!
                 </p>
             </div>
         </div>
+        <hr>
         <div class="acc">
             <button class="acc-btn">
                 <p>How can I get help if I'm stuck on a Frontend Mentor challenge?</p>
                 <img src="assets/images/icon-plus.svg" alt="icon plus">
             </button>
-            <div class="acc-content" aria-hidden="true">
+            <div class="acc-content" aria-expanded="false">
                 <p>
                     The best place to get help is inside Frontend Mentor's Discord community. There's a help
                     channel where you can ask questions and seek support from other community members.                </p>
