fixed accessbility issues

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
                 <img class="star-icon" src="assets/images/icon-star.svg" alt="icon star">
                 <h1>FAQs</h1>
             </div>
-            <div class="acc">
-                <button class="acc-btn">
+            <div class="acc" role="button" aria-expanded="true">
+                <div class="acc-btn">
                     <p>What is Frontend Mentor, and how will it help me?</p>
-                    <img src="assets/images/icon-plus.svg" alt="icon plus">
-                </button>
-                <div class="acc-content" aria-expanded="false">
+                    <img src="assets/images/icon-minus.svg" alt="icon plus">
+                </div>
+                <div class="acc-content" aria-hidden="false">
                 <p>
                     Frontend Mentor offers realistic coding challenges to help developers improve their
                     frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for
@@ -29,12 +29,12 @@
             </div>
             </div>
             <hr>
-            <div class="acc">
-            <button class="acc-btn">
+            <div class="acc" role="button" aria-expanded="false">
+            <div class="acc-btn">
                 <p>Is Frontend Mentor free?</p>
                 <img src="assets/images/icon-plus.svg" alt="icon plus">
-            </button>
-            <div class="acc-content" aria-expanded="false">
+            </div>
+            <div class="acc-content" aria-hidden="true">
             <p>
                 Yes, Frontend Mentor offers both free and premium coding challenges, with the free
                 option providing access to a range of projects suitable for all skill levels.
@@ -42,12 +42,12 @@
             </div>
             </div>
             <hr>
-            <div class="acc">
-            <button class="acc-btn">
+            <div class="acc" role="button" aria-expanded="false">
+            <div class="acc-btn">
                 <p>Can I use Frontend Mentor projects in my portfolio?</p>
                 <img src="assets/images/icon-plus.svg" alt="icon plus">
-            </button>
-            <div class="acc-content" aria-expanded="false">
+            </div>
+            <div class="acc-content" aria-hidden="true">
                 <p>
                     Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
                     way to showcase your skills to potential employers!
@@ -55,12 +55,12 @@
             </div>
         </div>
         <hr>
-        <div class="acc">
-            <button class="acc-btn">
+        <div class="acc" role="button" aria-expanded="false">
+            <div class="acc-btn">
                 <p>How can I get help if I'm stuck on a Frontend Mentor challenge?</p>
                 <img src="assets/images/icon-plus.svg" alt="icon plus">
-            </button>
-            <div class="acc-content" aria-expanded="false">
+            </div>
+            <div class="acc-content" aria-hidden="true">
                 <p>
                     The best place to get help is inside Frontend Mentor's Discord community. There's a help
                     channel where you can ask questions and seek support from other community members.                </p>
