--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
                 <img class="star-icon" src="assets/images/icon-star.svg" alt="icon star">
                 <h1>FAQs</h1>
             </div>
-            <div class="acc" role="button" aria-expanded="true">
-                <div class="acc-btn">
+            <div class="acc" aria-expanded="true">
+                <button class="acc-btn">
                     <p>What is Frontend Mentor, and how will it help me?</p>
                     <img src="assets/images/icon-minus.svg" alt="icon plus">
-                </div>
+                </button>
                 <div class="acc-content" aria-hidden="false">
                 <p>
                     Frontend Mentor offers realistic coding challenges to help developers improve their
@@ -29,24 +29,24 @@
             </div>
             </div>
             <hr>
-            <div class="acc" role="button" aria-expanded="false">
-            <div class="acc-btn">
-                <p>Is Frontend Mentor free?</p>
-                <img src="assets/images/icon-plus.svg" alt="icon plus">
-            </div>
-            <div class="acc-content" aria-hidden="true">
-            <p>
-                Yes, Frontend Mentor offers both free and premium coding challenges, with the free
-                option providing access to a range of projects suitable for all skill levels.
-            </p>
-            </div>
+            <div class="acc" aria-expanded="false">
+                <button class="acc-btn">
+                    <p>Is Frontend Mentor free?</p>
+                    <img src="assets/images/icon-plus.svg" alt="icon plus">
+                </button>
+                <div class="acc-content" aria-hidden="true">
+                <p>
+                    Yes, Frontend Mentor offers both free and premium coding challenges, with the free
+                    option providing access to a range of projects suitable for all skill levels.
+                </p>
+                </div>
             </div>
             <hr>
-            <div class="acc" role="button" aria-expanded="false">
-            <div class="acc-btn">
+            <div class="acc" aria-expanded="false">
+            <button class="acc-btn">
                 <p>Can I use Frontend Mentor projects in my portfolio?</p>
                 <img src="assets/images/icon-plus.svg" alt="icon plus">
-            </div>
+            </button>
             <div class="acc-content" aria-hidden="true">
                 <p>
                     Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
@@ -55,11 +55,11 @@
             </div>
         </div>
         <hr>
-        <div class="acc" role="button" aria-expanded="false">
-            <div class="acc-btn">
+        <div class="acc" aria-expanded="false">
+            <button class="acc-btn">
                 <p>How can I get help if I'm stuck on a Frontend Mentor challenge?</p>
                 <img src="assets/images/icon-plus.svg" alt="icon plus">
-            </div>
+            </button>
             <div class="acc-content" aria-hidden="true">
                 <p>
                     The best place to get help is inside Frontend Mentor's Discord community. There's a help
