--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <hr>
         <div class="acc" aria-expanded="false">
             <button class="acc-btn">
-                <p>How can I get help if I'm stuck on a Frontend Mentor challenge?</p>
+                <p>How can I get help if I'm stuck on a challenge?</p>
                 <img src="assets/images/icon-plus.svg" alt="icon plus">
             </button>
             <div class="acc-content" aria-hidden="true">
